# create-python-server

./: .gitignore  pyproject.toml
sqlagent/: README.md  pyproject.toml
sqlagent/src/sqlagent/: llm.py  retriever.py  server.old  server.py  sql_retriever_agent.py  utils.py
src/create_mcp_server/template/: server.py.jinja2
